@@ -1,6 +1,7 @@
 
   &INPUT_CONDUCTOR
     postfix='_Au'
+    work_dir = './SCRATCH'
     dimC = 6
     calculation_type = 'bulk'
     ne = 1000  
