@@ -4,7 +4,7 @@
    dimC = 50
    dimR = 6
    ne = 1000
-   emin = -7.0
+   emin = -8.0
    emax = 2.0
    datafile_L = "./SCRATCH/pt1_WanT.ham"
    datafile_C = "./SCRATCH/pt_h2_pt_WanT.ham"
@@ -13,6 +13,8 @@
    delta = 0.005
 !   smearing_type = 'gaussian'
    do_eigenchannels = .TRUE.
+   ie_eigplot = 800
+   ik_eigplot = 1
 /
 
 <HAMILTONIAN_DATA>
